<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
            android:id="@+id/calc_title"
            android:text="@string/calculator"
            android:layout_margin="16dp"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/calc_display"
            android:text=""
            android:textAlignment="center"
            android:textSize="30sp"
            android:background="@drawable/textview_border"
            android:layout_width="300dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calc_title"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:id="@+id/calc_result"
            android:text=""
            android:textAlignment="center"
            android:textSize="30sp"
            android:background="@drawable/textview_border"
            android:paddingTop="10dp"
            android:layout_width="300dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calc_display"
            app:layout_constraintEnd_toEndOf="parent"

    />

<!--    NUMBERS GROUP____________________-->
    <Button
            android:id="@+id/button_1"
            android:text="@string/button_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/teal_200"
            app:layout_constraintTop_toBottomOf="@+id/calc_result"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:id="@+id/button_2"
            android:text="@string/button_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:backgroundTint="@color/teal_200"
            app:layout_constraintTop_toBottomOf="@+id/calc_result"
            app:layout_constraintStart_toEndOf="@+id/button_1"/>
    <Button
            android:id="@+id/button_3"
            android:text="@string/button_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:backgroundTint="@color/teal_200"
            app:layout_constraintTop_toBottomOf="@+id/calc_result"
            app:layout_constraintStart_toEndOf="@+id/button_2"/>

    <Button
            android:id="@+id/button_4"
            android:text="@string/button_4"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/teal_200"
            app:layout_constraintTop_toBottomOf="@+id/button_1"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:id="@+id/button_5"
            android:text="@string/button_5"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:backgroundTint="@color/teal_200"
            app:layout_constraintTop_toBottomOf="@+id/button_2"
            app:layout_constraintStart_toEndOf="@+id/button_4"/>
    <Button
            android:id="@+id/button_6"
            android:text="@string/button_6"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:backgroundTint="@color/teal_200"
            app:layout_constraintTop_toBottomOf="@+id/button_3"
            app:layout_constraintStart_toEndOf="@+id/button_5"/>
    <Button
            android:id="@+id/button_7"
            android:text="@string/button_7"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/teal_200"
            app:layout_constraintTop_toBottomOf="@+id/button_4"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:id="@+id/button_8"
            android:text="@string/button_8"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:backgroundTint="@color/teal_200"
            app:layout_constraintTop_toBottomOf="@+id/button_5"
            app:layout_constraintStart_toEndOf="@+id/button_7"/>
    <Button
            android:id="@+id/button_9"
            android:text="@string/button_9"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:backgroundTint="@color/teal_200"
            app:layout_constraintTop_toBottomOf="@+id/button_6"
            app:layout_constraintStart_toEndOf="@+id/button_8"/>
    <Button
            android:id="@+id/button_0"
            android:text="@string/button_0"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/teal_200"
            app:layout_constraintTop_toBottomOf="@+id/button_7"
            app:layout_constraintStart_toStartOf="parent"/>

<!--    </android.support.constraint.Group>-->
<!--    OPERATORS GROUP__________________________________-->
    <Button
            android:id="@+id/button_delete"
            android:text="@string/button_del"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:backgroundTint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calc_result"
            app:layout_constraintStart_toEndOf="@+id/button_3"/>
    <Button
            android:id="@+id/button_plus"
            android:text="@string/button_plus"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_delete"
            app:layout_constraintStart_toEndOf="@+id/button_6"/>
    <Button
            android:id="@+id/button_minus"
            android:text="@string/button_minus"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_plus"
            app:layout_constraintStart_toEndOf="@+id/button_9"/>
    <Button
            android:id="@+id/button_times"
            android:text="@string/button_times"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_minus"
            app:layout_constraintStart_toEndOf="@+id/button_divide"/>
    <Button
            android:id="@+id/button_divide"
            android:text="@string/button_division"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_9"
            app:layout_constraintStart_toEndOf="@+id/button_equal"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
                android:id="@+id/button_equal"
                android:text="@string/button_equal"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:paddingTop="30dp"
                android:backgroundTint="@color/purple_200"
                app:layout_constraintTop_toBottomOf="@+id/button_8"
                app:layout_constraintStart_toEndOf="@+id/button_0"
                android:textColor="#5E35B1"/>

</android.support.constraint.ConstraintLayout>