<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/by_milton_chino"
            android:layout_width="130dp"
            android:layout_height="32dp"
            android:id="@+id/by_milton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="monospace"
            android:textAlignment="viewStart"
            android:textColor="#0277BD"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="34sp"
            android:fontFamily="casual"
            android:typeface="serif"
            android:textAlignment="viewStart"
            android:textColor="#00695C"
            android:id="@+id/welcome_text"/>
    <Button
            android:id="@+id/alarm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_text"/>
    <Button
            android:id="@+id/calc_button"
            android:text="@string/calculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/welcome_text"
            app:layout_constraintStart_toEndOf="@id/alarm_button"/>
    <Button
            android:id="@+id/map_button"
            android:text="@string/map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/welcome_text"
            app:layout_constraintStart_toEndOf="@id/calc_button"/>

</android.support.constraint.ConstraintLayout>